--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
       href="https://res.cloudinary.com/pro-solve/image/upload/v1702275543/osun_new_tam4p7.png"
     />
 
-    <title>Research and Seminar</title>
+    <title>
+      Research and Seminar INSTITUTE OF AGRICULTURAL RESEARCH AND TRAINING IART
+      Official Website
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
