--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,18 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="logo192.png"
+      href="https://res.cloudinary.com/pro-solve/image/upload/v1702275543/osun_new_tam4p7.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="research and seminar"
-    />
+    <meta name="description" content="research and seminar" />
     <link
       rel="apple-touch-icon"
-      href="logo192.png"
+      href="https://res.cloudinary.com/pro-solve/image/upload/v1702275543/osun_new_tam4p7.png"
     />
-
     <link
       rel="manifest"
-      href="logo192.png"
+      href="https://res.cloudinary.com/pro-solve/image/upload/v1702275543/osun_new_tam4p7.png"
     />
 
     <title>
