--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,7 @@
       href="https://res.cloudinary.com/pro-solve/image/upload/v1702275543/osun_new_tam4p7.png"
     />
 
-    <title>
-      Research and Seminar INSTITUTE OF AGRICULTURAL RESEARCH AND TRAINING IART
-      Official Website
-    </title>
+    <title>Research and Seminar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
